<resources>
    <string name="app_name">Islamic Finance Quiz</string>
    <string name="Contestant_name">Name</string>
    <string name="name_question">** Tell me your name, please?</string>
    <string name="question_one">1- ADIB - Egypt obligation to abide by Islamic Sharia rulings is a ....</string>
    <string name="question_two">2- Investing in Treasury bonds is ....</string>
    <string name="question_three">3- The compensation against banking services such as issuing Checkbooks could be in the form of ....</string>
    <string name="question_four">4- Current accounts in nature is ....</string>
    <string name="question_five">5- In Murabaha sale, the price must be declared as it is .... </string>
    <string name="question_six">6- Write below The type of the sale where the seller is obliged to tell the buyer of the original price of the commodity?</string>
</resources>
